[tool.poetry]
name = "cw2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
logging = "^0.4.9.6"
python-dotenv = "^1.1.1"
patch = "^1.16"
pandas = "^2.3.1"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"
pandas = "^2.3.1"


[tool.poetry.group.dependencies.dependencies]
logging = "^0.4.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
